--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
@@ -62,7 +59,7 @@
           </div>
           <p class="lead mb-5">
             <strong>Hai, Saya PARMA</strong> 
-            seorang Mahasiswa S1 Prodi Informatika yang memiliki ketertarikan tinggi dalam pengembangan antarmuka pengguna (UI) dan pengembangan frontend. Berpengalaman dalam membangun web sederhana menggunakan Laravel dan Boostrap.
+            seorang Mahasiswa S1 di Universitas Sulawesi Barat Prodi Informatika semester 4 yang memiliki ketertarikan tinggi dalam pengembangan antarmuka pengguna (UI) dan pengembangan frontend. Berpengalaman dalam membangun web sederhana menggunakan Laravel dan Boostrap.
           </p>
           <div class="social-icons">
             <a class="social-icon" href="www.linkedin.com/in/parma-3b7053374">
@@ -116,25 +113,6 @@
           </section>
       </section>
       <hr class="m-0" />
-      <!-- Education-->
-      <section class="resume-section" id="education">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Education</h2>
-          <div
-            class="d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Universitas Sulawesi Barat</h3>
-              <div class="subheading mb-3">Teknik</div>
-              <div>Informatika - Semester 4</div>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">Agustus 2023 - Sekarang</span>
-            </div>
-          </div>
-        </div>
-      </section>
-      <hr class="m-0" />
       <!-- Skills-->
       <section class="resume-section" id="skills">
         <div class="resume-section-content">
@@ -146,7 +124,6 @@
             <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
             <li class="list-inline-item"><i class="fas fa-paint-brush"></i></li>
             <li class="list-inline-item"><i class="fab fa-figma"></i></li>
-            <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
           </ul>
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
