--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Portofolio-Parma</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <title>Parma</title>
+    <link rel="icon" type="image/x-icon" href="admin/img/favicon.ico" />
     <!-- icon-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -82,7 +82,6 @@
       <section class="resume-section" id="experience">
         <div class="resume-section-content">
           <h2 class="mb-5">Experience Project</h2>
-          <!-- PROYEK -->
           <section class="experience-carousel">
             <div class="carousel-container">
               <button class="carousel-btn prev" onclick="slideLeft('proyekTrack')">&#10094;</button>
@@ -103,9 +102,11 @@
                   <h6>Proyek tugas kuliah UI/UX berupa prototipe aplikasi belanja produk tani lokal. Fokus pada navigasi sederhana, desain bersih, dan kemudahan pengguna dalam menjelajah produk UMKM.</h6>
                 </div>
                 <div class="carousel-card">
-                  <img src="admin/img/projek/datafilm.png" />
-                  <h4>Web Manajemen Data Film</h4>
-                  <h6>Aplikasi web untuk mengelola data film, jadwal tayang, tiket, dan pengunjung bioskop. Dibuat dengan Laravel dan Bootstrap sebagai bagian dari tugas kuliah.</h6>
+                  <a href="Detail-web-Manajemen.html">
+                    <img src="admin/img/projek/datafilm.png" />
+                    <h4>Web Manajemen Data Film</h4>
+                    <h6>Aplikasi web untuk mengelola data film, jadwal tayang, tiket, dan pengunjung bioskop. Dibuat dengan Laravel dan Bootstrap sebagai bagian dari tugas kuliah.</h6>
+                  </a>
                 </div>
               </div>
               <button class="carousel-btn next" onclick="slideRight('proyekTrack')">&#10095;</button>
@@ -156,7 +157,6 @@
               <div class="subheading mb-3">BNSP [2024]</div>
               <p>Mempelajari prinsip desain visual, pengolahan gambar digital, komposisi layout, serta penggunaan aplikasi seperti CorelDRAW</p>
             </div>
-      
           </div>
         </div>
       </section>      
