--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Parma</title>
-    <link rel="icon" type="image/x-icon" href="admin/img/favicon.ico" />
+    <link rel="icon" href="admin/img/favicon.png" />
     <!-- icon-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
